# vs_project

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  Readme.txt
.github/: config.yml
src/: main.cpp
